--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -278,6 +278,7 @@
       <DependentUpon>site.css</DependentUpon>
     </Content>
     <None Include="Content\site.less" />
+    <Content Include="Scripts\app\app.js" />
     <Content Include="Scripts\bootbox.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
